Use some JavaScript to make the header position fixed (and always visible)

--- a/public/stylesheets/storyboard.css
+++ b/public/stylesheets/storyboard.css
@@ -100,7 +100,7 @@ td {
 }
 
 .document {
-  margin-top: 6em;
+  margin-top: 8em;
 }
 
 .flashMessage {
